@@ -62,6 +62,11 @@
 #include <windows.h>
 #endif
 
+#if defined(__APPLE__) && defined(HAVE_NSGETENVIRON) && defined(HAVE_CRT_EXTERNS_H)
+# include <crt_externs.h>
+# define environ (*_NSGetEnviron())
+#endif
+
 /**
  * gnome_util_user_shell:
  *
